--- a/notebooks/notebook_03_widgets.ipynb
+++ b/notebooks/notebook_03_widgets.ipynb
@@ -52,7 +52,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7e0848faa2f4ccf87548bd90556d1d7",
+       "model_id": "32b516a005e242158fd137b9cc3351e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,12 +76,12 @@
     }
    ],
    "source": [
-    "freqs = np.arange(2, 20, 3)\n",
+    "frequencies = np.arange(2, 20, 3)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "plt.subplots_adjust(bottom=0.2)\n",
     "t = np.arange(0.0, 1.0, 0.001)\n",
-    "s = np.sin(2 * np.pi * freqs[0] * t)\n",
+    "s = np.sin(2 * np.pi * frequencies[0] * t)\n",
     "(l,) = plt.plot(t, s, lw=2)\n",
     "\n",
     "\n",
@@ -90,26 +90,26 @@
     "\n",
     "    def next(self, event):\n",
     "        self.ind += 1\n",
-    "        i = self.ind % len(freqs)\n",
-    "        ydata = np.sin(2 * np.pi * freqs[i] * t)\n",
+    "        i = self.ind % len(frequencies)\n",
+    "        ydata = np.sin(2 * np.pi * frequencies[i] * t)\n",
     "        l.set_ydata(ydata)\n",
     "        plt.draw()\n",
     "\n",
     "    def prev(self, event):\n",
     "        self.ind -= 1\n",
-    "        i = self.ind % len(freqs)\n",
-    "        ydata = np.sin(2 * np.pi * freqs[i] * t)\n",
+    "        i = self.ind % len(frequencies)\n",
+    "        ydata = np.sin(2 * np.pi * frequencies[i] * t)\n",
     "        l.set_ydata(ydata)\n",
     "        plt.draw()\n",
     "\n",
     "\n",
     "callback = Index()\n",
-    "axprev = plt.axes([0.7, 0.05, 0.1, 0.075])\n",
-    "axnext = plt.axes([0.81, 0.05, 0.1, 0.075])\n",
-    "bnext = Button(axnext, \"Next\")\n",
-    "bnext.on_clicked(callback.next)\n",
-    "bprev = Button(axprev, \"Previous\")\n",
-    "bprev.on_clicked(callback.prev)\n",
+    "previous_axis = plt.axes([0.7, 0.05, 0.1, 0.075])\n",
+    "next_axis = plt.axes([0.81, 0.05, 0.1, 0.075])\n",
+    "next_button = Button(next_axis, \"Next\")\n",
+    "next_button.on_clicked(callback.next)\n",
+    "previous_button = Button(previous_axis, \"Previous\")\n",
+    "previous_button.on_clicked(callback.prev)\n",
     "\n",
     "plt.show()"
    ]
@@ -131,7 +131,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14c28693f05440cb9d0018ff85fce601",
+       "model_id": "e993e4f916f746ff8c4ed16c138bb9b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,45 +164,45 @@
     "(l,) = plt.plot(t, s, lw=2, color=\"red\")\n",
     "plt.axis([0, 1, -10, 10])\n",
     "\n",
-    "axcolor = \"lightgoldenrodyellow\"\n",
-    "axfreq = plt.axes([0.25, 0.1, 0.65, 0.03], facecolor=axcolor)\n",
-    "axamp = plt.axes([0.25, 0.15, 0.65, 0.03], facecolor=axcolor)\n",
+    "axis_color = \"lightgoldenrodyellow\"\n",
+    "axis_frequency = plt.axes([0.25, 0.1, 0.65, 0.03], facecolor=axis_color)\n",
+    "axis_amplitude = plt.axes([0.25, 0.15, 0.65, 0.03], facecolor=axis_color)\n",
     "\n",
-    "sfreq = Slider(axfreq, \"Freq\", 0.1, 30.0, valinit=f0)\n",
-    "samp = Slider(axamp, \"Amp\", 0.1, 10.0, valinit=a0)\n",
+    "slider_frequency = Slider(axis_frequency, \"Freq\", 0.1, 30.0, valinit=f0)\n",
+    "slider_amplitude = Slider(axis_amplitude, \"Amp\", 0.1, 10.0, valinit=a0)\n",
     "\n",
     "\n",
     "def update(val):\n",
-    "    amp = samp.val\n",
-    "    freq = sfreq.val\n",
+    "    amp = slider_amplitude.val\n",
+    "    freq = slider_frequency.val\n",
     "    l.set_ydata(amp * np.sin(2 * np.pi * freq * t))\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
     "\n",
-    "sfreq.on_changed(update)\n",
-    "samp.on_changed(update)\n",
+    "slider_frequency.on_changed(update)\n",
+    "slider_amplitude.on_changed(update)\n",
     "\n",
-    "resetax = plt.axes([0.8, 0.025, 0.1, 0.04])\n",
-    "button = Button(resetax, \"Reset\", color=axcolor, hovercolor=\"0.975\")\n",
+    "reset_axis = plt.axes([0.8, 0.025, 0.1, 0.04])\n",
+    "button = Button(reset_axis, \"Reset\", color=axis_color, hovercolor=\"0.975\")\n",
     "\n",
     "\n",
     "def reset(event):\n",
-    "    sfreq.reset()\n",
-    "    samp.reset()\n",
+    "    slider_frequency.reset()\n",
+    "    slider_amplitude.reset()\n",
     "\n",
     "\n",
     "button.on_clicked(reset)\n",
     "\n",
-    "rax = plt.axes([0.025, 0.5, 0.15, 0.15], facecolor=axcolor)\n",
+    "rax = plt.axes([0.025, 0.5, 0.15, 0.15], facecolor=axis_color)\n",
     "radio = RadioButtons(rax, (\"red\", \"blue\", \"green\"), active=0)\n",
     "\n",
     "\n",
-    "def colorfunc(label):\n",
+    "def color_function(label):\n",
     "    l.set_color(label)\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
     "\n",
-    "radio.on_clicked(colorfunc)\n",
+    "radio.on_clicked(color_function)\n",
     "\n",
     "plt.show()"
    ]
