--- a/notebooks/notebook_02_correlation_and_fitting.ipynb
+++ b/notebooks/notebook_02_correlation_and_fitting.ipynb
@@ -243,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While `x` and `y` are specifically `pandas.Series` objects (and not `numpy.ndarry`), we can still utilize them as such, as they mimic the functionality provided by `numpy`. This means we can call functions like `sum` on them to compute their sum easily."
+    "While `x` and `y` are specifically `pandas.Series` objects (and not `numpy.ndarray`), we can still utilize them as such, as they mimic the functionality provided by `numpy`. This means we can call functions like `sum` on them to compute their sum easily."
    ]
   },
   {
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lastly, recall that we can apply exponents to values using the `**` operator, e.g. we can sqaure each element of `x` using:"
+    "Lastly, recall that we can apply exponents to values using the `**` operator, e.g. we can square each element of `x` using:"
    ]
   },
   {
@@ -363,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The function [`numpy.corrcoeff`](https://numpy.org/doc/stable/reference/generated/numpy.corrcoef.html) computes the correlation coefficients, and returns to us the *correlation matrix*, which shows the correlation between each variable against every variable, including itself. Each row of this matrix represents the coefficients each variable - the first row is how well it correlates to the set; the second row is how it correlates to the set; etc.The diagonals are 1 since any variable will be strongly correlated to itself. As this can be applied to more than just 2 variables at a time, the generalized form for computing this with `numpy` is:"
+    "The function [`numpy.corrcoef`](https://numpy.org/doc/stable/reference/generated/numpy.corrcoef.html) computes the correlation coefficients, and returns to us the *correlation matrix*, which shows the correlation between each variable against every variable, including itself. Each row of this matrix represents the coefficients each variable - the first row is how well it correlates to the set; the second row is how it correlates to the set; etc.The diagonals are 1 since any variable will be strongly correlated to itself. As this can be applied to more than just 2 variables at a time, the generalized form for computing this with `numpy` is:"
    ]
   },
   {
@@ -517,8 +517,8 @@
    "source": [
     "import numpy.polynomial.polynomial as polynomial\n",
     "\n",
-    "coeffs = polynomial.polyfit(df.absences, df.grade, 1)\n",
-    "coeffs"
+    "coefficients = polynomial.polyfit(df.absences, df.grade, 1)\n",
+    "coefficients"
    ]
   },
   {
@@ -551,7 +551,7 @@
     }
    ],
    "source": [
-    "fit = polynomial.polyval([0, 7], coeffs)\n",
+    "fit = polynomial.polyval([0, 7], coefficients)\n",
     "fit"
    ]
   },
@@ -587,7 +587,7 @@
     "ax.text(x=4, y=90, s=f\"r = {r[0][1]:.3f}\", fontsize=\"large\")\n",
     "\n",
     "# create a nicely formatted polynomial\n",
-    "poly = polynomial.Polynomial([_.round(2) for _ in coeffs])\n",
+    "poly = polynomial.Polynomial([_.round(2) for _ in coefficients])\n",
     "\n",
     "ax.text(x=4, y=85, s=f\"f(x) $\\\\approx$ {poly}\", fontsize=\"large\")"
    ]
@@ -614,7 +614,7 @@
    "source": [
     "#### Nonlinear Data\n",
     "\n",
-    "As correlation is a linear statistic, it is not applicable to use for non-linear data. This does not mean the variables being assessed are not correlated or related in some way, just that we cannot quantify that relationship with the methods learned. Consider quadratic data and its trendline:"
+    "As correlation is a linear statistic, it is not applicable to use for non-linear data. This does not mean the variables being assessed are not correlated or related in some way, just that we cannot quantify that relationship with the methods learned. Consider quadratic data and its trend line:"
    ]
   },
   {
@@ -648,8 +648,8 @@
     "quadratic[\"y\"] = quadratic.x**2\n",
     "ax = quadratic.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(quadratic.x, quadratic.y, 1)\n",
-    "fit = polynomial.polyval([-5, 5], coeffs)\n",
+    "coefficients = polynomial.polyfit(quadratic.x, quadratic.y, 1)\n",
+    "fit = polynomial.polyval([-5, 5], coefficients)\n",
     "ax.plot([-5, 5], fit)"
    ]
   },
@@ -686,7 +686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have a corefficient that is essentially 0, though there very well could be a relationship at work here (one that just is not linear!)"
+    "Here we have a coefficient that is essentially 0, though there very well could be a relationship at work here (one that just is not linear!)"
    ]
   },
   {
@@ -728,8 +728,8 @@
     "small = pd.DataFrame({\"x\": [1.0, 2.2, 3.8], \"y\": [0.5, 2.2, 2.3]})\n",
     "ax = small.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(small.x, small.y, 1)\n",
-    "fit = polynomial.polyval([1.0, 3.8], coeffs)\n",
+    "coefficients = polynomial.polyfit(small.x, small.y, 1)\n",
+    "fit = polynomial.polyval([1.0, 3.8], coefficients)\n",
     "ax.plot([1.0, 3.8], fit)"
    ]
   },
@@ -817,8 +817,8 @@
     ")\n",
     "ax = clusters.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(clusters.x, clusters.y, 1)\n",
-    "fit = polynomial.polyval([0.0, 5.5], coeffs)\n",
+    "coefficients = polynomial.polyfit(clusters.x, clusters.y, 1)\n",
+    "fit = polynomial.polyval([0.0, 5.5], coefficients)\n",
     "ax.plot([0.0, 5.5], fit)"
    ]
   },
@@ -890,8 +890,8 @@
     ")\n",
     "ax = clusters.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(clusters.x, clusters.y, 1)\n",
-    "fit = polynomial.polyval([0.0, 5.5], coeffs)\n",
+    "coefficients = polynomial.polyfit(clusters.x, clusters.y, 1)\n",
+    "fit = polynomial.polyval([0.0, 5.5], coefficients)\n",
     "ax.plot([0.0, 5.5], fit)"
    ]
   },
@@ -947,8 +947,8 @@
     "cluster1 = clusters.iloc[:25]\n",
     "ax = cluster1.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(cluster1.x, cluster1.y, 1)\n",
-    "fit = polynomial.polyval([0.0, 0.5], coeffs)\n",
+    "coefficients = polynomial.polyfit(cluster1.x, cluster1.y, 1)\n",
+    "fit = polynomial.polyval([0.0, 0.5], coefficients)\n",
     "ax.plot([0.0, 0.5], fit)"
    ]
   },
@@ -1004,8 +1004,8 @@
     "cluster2 = clusters.iloc[25:]\n",
     "ax = cluster2.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(cluster2.x, cluster2.y, 1)\n",
-    "fit = polynomial.polyval([5.0, 5.5], coeffs)\n",
+    "coefficients = polynomial.polyfit(cluster2.x, cluster2.y, 1)\n",
+    "fit = polynomial.polyval([5.0, 5.5], coefficients)\n",
     "ax.plot([5.0, 5.5], fit)"
    ]
   },
@@ -1076,8 +1076,8 @@
     "outlier.iloc[-1] = [5.0, 5.0]\n",
     "ax = outlier.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(outlier.x, outlier.y, 1)\n",
-    "fit = polynomial.polyval([0.0, 5.0], coeffs)\n",
+    "coefficients = polynomial.polyfit(outlier.x, outlier.y, 1)\n",
+    "fit = polynomial.polyval([0.0, 5.0], coefficients)\n",
     "ax.plot([0.0, 5.0], fit)"
    ]
   },
@@ -1107,7 +1107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again our trendline and correlation coefficient indicate a strong relation in the data, but the single outlier at `(5.0, 5.0)` is skewing our assessment of the data. If we strip that value from our data, we see that there is not much to our data."
+    "Again our trend line and correlation coefficient indicate a strong relation in the data, but the single outlier at `(5.0, 5.0)` is skewing our assessment of the data. If we strip that value from our data, we see that there is not much to our data."
    ]
   },
   {
@@ -1140,8 +1140,8 @@
     "outlier_removed = outlier.iloc[:-1]\n",
     "ax = outlier_removed.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(outlier_removed.x, outlier_removed.y, 1)\n",
-    "fit = polynomial.polyval([0.0, 0.5], coeffs)\n",
+    "coefficients = polynomial.polyfit(outlier_removed.x, outlier_removed.y, 1)\n",
+    "fit = polynomial.polyval([0.0, 0.5], coefficients)\n",
     "ax.plot([0.0, 0.5], fit)"
    ]
   },
@@ -1350,8 +1350,8 @@
     "quadratic[\"y\"] = quadratic.x**2\n",
     "ax = quadratic.plot.scatter(\"x\", \"y\")\n",
     "\n",
-    "coeffs = polynomial.polyfit(quadratic.x, quadratic.y, 1)\n",
-    "fit = polynomial.polyval([-5, 5], coeffs)\n",
+    "coefficients = polynomial.polyfit(quadratic.x, quadratic.y, 1)\n",
+    "fit = polynomial.polyval([-5, 5], coefficients)\n",
     "ax.plot([-5, 5], fit)\n",
     "\n",
     "# Generate Random Data\n",
@@ -1362,9 +1362,9 @@
     "    }\n",
     ")\n",
     "\n",
-    "coeffs = polynomial.polyfit(random_data.x, random_data.y, 1)\n",
+    "coefficients = polynomial.polyfit(random_data.x, random_data.y, 1)\n",
     "ax = random_data.plot.scatter(\"x\", \"y\")\n",
-    "fit = polynomial.polyval([-5, 5], coeffs)\n",
+    "fit = polynomial.polyval([-5, 5], coefficients)\n",
     "ax.plot([-5, 5], fit)\n",
     "\n",
     "\n",
